--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-i18next": "^16.5.0",
+    "react-router-dom": "^7.12.0",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.2",
     "baseline-browser-mapping": "^2.9.14",
     "eslint": "^9.34.0",
