fixed save and process

--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "rexfill",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "juno": {
+    "functions": {
+      "version": "0.0.1"
+    }
+  },
   "type": "module",
   "scripts": {
     "dev": "vite --force",
