--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@icp-sdk/core": "^5.0.0",
     "@junobuild/core": "^3.4.1",
     "@junobuild/functions": "^0.5.5",
+    "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-virtual": "^3.13.18",
     "docxtemplater": "^3.47.2",
     "i18next": "^25.7.3",
