--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@dfinity/utils": "^4.1.0",
     "@icp-sdk/auth": "^5.0.0",
     "@icp-sdk/core": "^5.0.0",
+    "@junobuild/analytics": "^0.2.10",
     "@junobuild/core": "^3.4.1",
     "@junobuild/functions": "^0.5.5",
     "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-virtual": "^3.13.18",
-    "docxtemplater": "^3.47.2",
     "i18next": "^25.7.3",
     "lucide-react": "^0.562.0",
     "nanoid": "^5.1.5",
