--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@junobuild/functions": "^0.5.5",
     "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-virtual": "^3.13.18",
+    "docx-preview": "^0.3.7",
     "i18next": "^25.7.3",
     "lucide-react": "^0.562.0",
     "nanoid": "^5.1.5",
