--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postinstall": "npm run postinstall:copy-auth"
   },
   "dependencies": {
+    "@dfinity/principal": "^3.4.3",
     "@dfinity/utils": "^4.1.0",
     "@icp-sdk/auth": "^5.0.0",
     "@icp-sdk/core": "^5.0.0",
