tried to integrate paddle

--- a/.env
+++ b/.env
@@ -24,3 +24,8 @@ VITE_PADDLE_PRICE_ENTERPRISE_ORG_ANNUAL=pri_01kfwmtd420z3c5vgxxv7xcf93
 
 # Webhook Configuration (for satellite function)
 PADDLE_WEBHOOK_SECRET=pdl_ntfset_01kfrsb12zmvqzz792m7jv2dc4_6VH+eBMp/mKFC+2f6vfpX2ryc9qHVl/1
+
+# RexfillProxy Motoko Canister
+# Set this to your deployed Motoko canister ID after deployment
+# Example: xxxxx-xxxxx-xxxxx-xxxxx-cai
+REXFILL_PROXY_CANISTER_ID=
